# smart-isbn

./: LICENSE  README.md  app_barcode_cloud.py  book_details.py  pyproject.toml
.devcontainer/: devcontainer.json
